2004-09-27 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: fixed stupid bug that dlr lookup was
      made with source instead of destination address (in dlr
      source and destination switched).

2004-09-25 Alexander Malysh <amalysh at kannel.org>
    * gwlib/gw-rwlock.c, gw/smsc/smsc_at.h: fixed compiler warnings.

2004-09-18 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: added new function 'at2_error_string' and teached
      smsc_at to use it.
      Thanks to almado.de for provided patch!

2004-09-16 Alexander Malysh <amalysh at kannel.org>
    * gwlib/xmlrpc.c: fixed memory leak.

2004-09-10 Alexander Malysh <amalysh at kannel.org>
    * gwlib/gwlib.h: added 'gw-prioqueue.h'. fixed compile error.

2004-09-08 Alexander Malysh <amalysh at kannel.org>
    * gw/sms.[ch], gw/smsc/smsc_at.[ch], gw/smsc/smsc_emi.c: applied patch
      that adds usage of priority queue and priority flag in smsc_at & smsc_emi.
      This patch makes it possible to prioritize messages and to ensure that older
      messages will be sent first.
      [Msg-ID: <ch9pko$r5u$2@sea.gmane.org>].

2004-09-04  Stipe Tolj  <stolj@wapme.de>
    * doc/userguide/userguide.xml: fixing jade compiler error of Alex's 
      previous commit for priority flag.

2004-09-03  Stipe Tolj  <stolj@wapme.de>
    * gw/smsc/smsc_http.c: upgradding bruNET response parsing to comply with
      more recent interface verions (v2.0+) where bruNET delivers 'MessageId'
      in the HTTP response body.

2004-09-03 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c, gw/msg-decl.h, gw/smsbox.c: applied patch that allows
      setting of sms priority flag in smsbox and smpp module. Also fixes wrong 
      priority setting in smpp module.
    * doc/userguide/userguide.xml: describe 'priority' flag and some missing params.

2004-09-01  Stipe Tolj  <stolj@wapme.de>
    * doc/userguide/userguide.xml: moved EMI/UCP specific 'throughput' to 